--- a/jual-flm.html
+++ b/jual-flm.html
@@ -231,6 +231,7 @@
     </div>
     <p class="mb-8 text-gray-300 italic bg-black/60 p-3 rounded">
       FLM di bawah khusus <strong>FL Studio Mobile</strong>. Cara pasang: <span class="not-italic">langsung import ke FL Studio Mobile tanpa di-extract</span>. Jika masih bingung, silakan hubungi WA saya.
+    KALO AUDIO PAS DIPUTAR MACET HARAP DITUNGGU AJA!!!
     </p>
   </header>
 
@@ -755,11 +756,11 @@
       </li>
 
       <!-- 29 (PRODUK BARU YANG KAMU MINTA DITAMBAHKAN) -->
-      <li data-uid="28" data-prod-id="trapp_pepass" data-price="130000" data-category="horeg" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+      <li data-uid="28" data-prod-id="trapp_pepass" data-price="120000" data-category="horeg" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
         <img src="https://i.imgur.com/ghNd4So.jpeg" alt="Trapp Nrotok Bass Blayer" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
         <div class="flex-1">
           <div class="font-semibold leading-tight">Trapp Nrotok Bass Blayer</div>
-          <div class="text-sm opacity-90">💲 Rp 130.000</div>
+          <div class="text-sm opacity-90">💲 Rp 120.000</div>
           <div class="mt-2 flex gap-2 items-center">
             <button data-audio="audio29" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover-bg-[#106EBE] hover=text-white transition">▶ Play Preview</button>
             <a data-buy="trapp_pepass" href="pembayaran.html?produk=Trapp%20Nrotok%20Bass%20Blayer" class="px-3 py-2 rounded-xl bg-[#106EBE] hover-bg-[#0FFCBE] hover=text-black font-medium transition">🛒 Beli</a>
@@ -772,11 +773,11 @@
       </li>
  
       <!-- 30 -->
-      <li data-uid="29" data-prod-id="Bootleg Slebew" data-price="100000" data-category="slow,bootleg,FYP Tiktok" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+      <li data-uid="29" data-prod-id="Bootleg Slebew" data-price="96000" data-category="slow,bootleg,FYP Tiktok" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
         <img src="https://i.imgur.com/ghNd4So.jpeg" alt="Bootleg Slebew" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
         <div class="flex-1">
           <div class="font-semibold leading-tight">Bootleg Slebew</div>
-          <div class="text-sm opacity-90">💲 Rp100.000</div>
+          <div class="text-sm opacity-90">💲 Rp96.000</div>
           <div class="mt-2 flex gap-2 items-center">
             <button data-audio="audio30" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white transition">▶ Play Preview</button>
             <a data-buy="Bootleg Slebew" href="pembayaran.html?produk=Bootleg%20Slebew" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover:text-black font-medium transition">🛒 Beli</a>
@@ -804,11 +805,11 @@
       </li>
 
       <!-- 32 -->
-      <li data-uid="31" data-prod-id="DJ TRAP TASSO" data-price="200000" data-category="slow,horeg" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+      <li data-uid="31" data-prod-id="DJ TRAP TASSO" data-price="120000" data-category="slow,horeg" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
         <img src="https://i.imgur.com/ghNd4So.jpeg" alt="DJ TRAP TASSO" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
         <div class="flex-1">
           <div class="font-semibold leading-tight">DJ TRAP TASSO</div>
-          <div class="text-sm opacity-90">💲 Rp200.000</div>
+          <div class="text-sm opacity-90">💲 Rp120.000</div>
           <div class="mt-2 flex gap-2 items-center">
             <button data-audio="audio32" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white transition">▶ Play Preview</button>
             <a data-buy="DJ TRAP TASSO" href="pembayaran.html?produk=DJ%20TRAP%20TASSO" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover:text-black font-medium transition">🛒 Beli</a>
@@ -836,11 +837,11 @@
       </li>
       
       <!-- 34 -->
-<li data-uid="33" data-prod-id="JJ BRUTAL MENGKANE" data-price="100000" data-category="ENAFF,FYP Tiktok" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+<li data-uid="33" data-prod-id="JJ BRUTAL MENGKANE" data-price="93500" data-category="ENAFF,FYP Tiktok" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
   <img src="https://i.imgur.com/ghNd4So.jpeg" alt="JJ BRUTAL MENGKANE" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
   <div class="flex-1">
     <div class="font-semibold leading-tight">JJ BRUTAL MENGKANE</div>
-    <div class="text-sm opacity-90">💲 Rp100.000</div>
+    <div class="text-sm opacity-90">💲 Rp93.500</div>
     <div class="mt-2 flex gap-2 items-center">
       <button data-audio="audio34" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white transition">▶ Play Preview</button>
       <a data-buy="JJ BRUTAL MENGKANE" href="pembayaran.html?produk=JJ BRUTAL MENGKANE" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover:text-black font-medium transition">🛒 Beli</a>
@@ -852,11 +853,11 @@
 </li>
 
       <!-- 35 -->
-<li data-uid="34" data-prod-id="STYLE REGGAE" data-price="78000" data-category="Slow,FYP Tiktok" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+<li data-uid="34" data-prod-id="STYLE REGGAE" data-price="74500" data-category="Slow,FYP Tiktok" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
   <img src="https://i.imgur.com/ghNd4So.jpeg" alt="STYLE REGGAE" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
   <div class="flex-1">
     <div class="font-semibold leading-tight">STYLE REGGAE</div>
-    <div class="text-sm opacity-90">💲 Rp78.000</div>
+    <div class="text-sm opacity-90">💲 Rp74.500</div>
     <div class="mt-2 flex gap-2 items-center">
       <button data-audio="audio35" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white transition">▶ Play Preview</button>
       <a data-buy="STYLE REGGAE" href="pembayaran.html?produk=STYLE REGGAE" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover:text-black font-medium transition">🛒 Beli</a>
@@ -884,11 +885,11 @@
 </li>
 
      <!-- 37 -->
-<li data-uid="36" data-prod-id="SLOW REMIX" data-price="80000" data-category="Slow,FYP Tiktok" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+<li data-uid="36" data-prod-id="SLOW REMIX" data-price="79500" data-category="Slow,FYP Tiktok" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
   <img src="https://i.imgur.com/ghNd4So.jpeg" alt="SLOW REMIX" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
   <div class="flex-1">
     <div class="font-semibold leading-tight">SLOW REMIX</div>
-    <div class="text-sm opacity-90">💲 Rp80.000</div>
+    <div class="text-sm opacity-90">💲 Rp79.500</div>
     <div class="mt-2 flex gap-2 items-center">
       <button data-audio="audio37" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white transition">▶ Play Preview</button>
       <a data-buy="SLOW REMIX" href="pembayaran.html?produk=SLOW REMIX" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover:text-black font-medium transition">🛒 Beli</a>
@@ -900,11 +901,11 @@
 </li>
 
      <!-- 38 -->
-<li data-uid="37" data-prod-id="STYLE FUNKOT" data-price="108000" data-category="Indobass,FYP Tiktok" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+<li data-uid="37" data-prod-id="STYLE FUNKOT" data-price="95000" data-category="Indobass,FYP Tiktok" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
   <img src="https://i.imgur.com/ghNd4So.jpeg" alt="STYLE FUNKOT" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
   <div class="flex-1">
     <div class="font-semibold leading-tight">STYLE FUNKOT</div>
-    <div class="text-sm opacity-90">💲 Rp108.000</div>
+    <div class="text-sm opacity-90">💲 Rp95.000</div>
     <div class="mt-2 flex gap-2 items-center">
       <button data-audio="audio38" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white transition">▶ Play Preview</button>
       <a data-buy="STYLE FUNKOT" href="pembayaran.html?produk=STYLE FUNKOT" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover:text-black font-medium transition">🛒 Beli</a>
@@ -916,11 +917,11 @@
 </li>
 
      <!-- 39 -->
-     <li data-uid="38" data-prod-id="JJ ENAFF ASOY" data-price="100000" data-category="ENAFF,FYP Tiktok" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+     <li data-uid="38" data-prod-id="JJ ENAFF ASOY" data-price="95000" data-category="ENAFF,FYP Tiktok" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
        <img src="https://i.imgur.com/ghNd4So.jpeg" alt="JJ ENAFF ASOY" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
        <div class="flex-1">
          <div class="font-semibold leading-tight">JJ ENAFF ASOY</div>
-         <div class="text-sm opacity-90">💲 Rp100.000</div>
+         <div class="text-sm opacity-90">💲 Rp95.000</div>
          <div class="mt-2 flex gap-2 items-center">
            <button data-audio="audio39" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white transition">▶ Play Preview</button>
            <a data-buy="JJ ENAFF ASOY" href="pembayaran.html?produk=JJ ENAFF ASOY" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover:text-black font-medium transition">🛒 Beli</a>
@@ -932,19 +933,51 @@
      </li>
 
      <!-- 40 -->
-     <li data-uid="39" data-prod-id="JDM ALONE MARSHMELLOW" data-price="100000" data-category="ENAFF,FYP Tiktok,Indobass" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+     <li data-uid="39" data-prod-id="JDM ALONE MARSHMELLOW" data-price="95500" data-category="ENAFF,FYP Tiktok,Indobass" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
        <img src="https://i.imgur.com/ghNd4So.jpeg" alt="JDM ALONE MARSHMELLOW" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
        <div class="flex-1">
          <div class="font-semibold leading-tight">JDM ALONE MARSHMELLOW</div>
-         <div class="text-sm opacity-90">💲 Rp100.000</div>
+         <div class="text-sm opacity-90">💲 Rp95.500</div>
          <div class="mt-2 flex gap-2 items-center">
            <button data-audio="audio40" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white transition">▶ Play Preview</button>
-           <a data-buy="JDM ALONE MARSHMELLOW" href="pembayaran.html?produk=JDM ALONE MARSHMELLOW" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover:text-black font-medium transition">🛒 Beli</a>
+           <a data-buy="JDM ALONE MARSHMELLOW" href="pembayaran.html?produk=JDM%20ALONE%20MARSHMELLOW" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover:text-black font-medium transition">🛒 Beli</a>
            <button data-cart="JDM ALONE MARSHMELLOW" class="add-cart-btn px-3 py-2 rounded-xl bg-[#ffd24d] text-black font-semibold">Tambah ke Keranjang</button>
          </div>
          <div class="player-controls-container"></div>
        </div>
        <audio id="audio40" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/40.mp3" preload="metadata"></audio>
+     </li>
+
+     <!-- 41 -->
+     <li data-uid="40" data-prod-id="BREAKFUNK GEN 1" data-price="95000" data-category="slow,bootleg,FYP Tiktok,ENAFF" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+       <img src="https://i.imgur.com/ghNd4So.jpeg" alt="BREAKFUNK GEN 1" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
+       <div class="flex-1">
+         <div class="font-semibold leading-tight">BREAKFUNK GEN 1</div>
+         <div class="text-sm opacity-90">💲 Rp95.000</div>
+         <div class="mt-2 flex gap-2 items-center">
+           <button data-audio="audio41" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white transition">▶ Play Preview</button>
+           <a data-buy="BREAKFUNK GEN 1" href="pembayaran.html?produk=BREAKFUNK%20GEN%201" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover:text-black font-medium transition">🛒 Beli</a>
+           <button data-cart="BREAKFUNK GEN 1" class="add-cart-btn px-3 py-2 rounded-xl bg-[#ffd24d] text-black font-semibold">Tambah ke Keranjang</button>
+         </div>
+         <div class="player-controls-container"></div>
+       </div>
+       <audio id="audio41" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/41.mp3" preload="metadata"></audio>
+     </li>
+
+     <!-- 42 -->
+     <li data-uid="41" data-prod-id="BREAKFUNK GEN 2" data-price="93000" data-category="slow,bootleg,FYP Tiktok,ENAFF" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+       <img src="https://i.imgur.com/ghNd4So.jpeg" alt="BREAKFUNK GEN 2" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
+       <div class="flex-1">
+         <div class="font-semibold leading-tight">BREAKFUNK GEN 2</div>
+         <div class="text-sm opacity-90">💲 Rp93.000</div>
+         <div class="mt-2 flex gap-2 items-center">
+           <button data-audio="audio42" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white transition">▶ Play Preview</button>
+           <a data-buy="BREAKFUNK GEN 2" href="pembayaran.html?produk=BREAKFUNK%20GEN%202" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover:text-black font-medium transition">🛒 Beli</a>
+           <button data-cart="BREAKFUNK GEN 2" class="add-cart-btn px-3 py-2 rounded-xl bg-[#ffd24d] text-black font-semibold">Tambah ke Keranjang</button>
+         </div>
+         <div class="player-controls-container"></div>
+       </div>
+       <audio id="audio42" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/42.mp3" preload="metadata"></audio>
      </li>
 
     </ul>
@@ -995,7 +1028,9 @@
       audio37:209,
       audio38:249,
       audio39:94,
-      audio40:126
+      audio40:126,
+      audio41:53,
+      audio42:145
     };
 
     // Helper: format seconds -> mm:ss
