--- a/jual-flm.html
+++ b/jual-flm.html
@@ -964,6 +964,22 @@
        <audio id="audio42" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/42.mp3" preload="metadata"></audio>
      </li>
 
+     <!-- 43 -->
+     <li data-uid="42" data-prod-id="ENAFF CULIK AKU DONG" data-price="89000" data-category="FYP Tiktok,ENAFF" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+       <img src="https://i.imgur.com/ghNd4So.jpeg" alt="ENAFF CULIK AKU DONG" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
+       <div class="flex-1">
+         <div class="font-semibold leading-tight">ENAFF CULIK AKU DONG</div>
+         <div class="text-sm opacity-90">💲 Rp89.000</div>
+         <div class="mt-2 flex gap-2 items-center">
+           <button data-audio="audio43" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white transition">▶ Play Preview</button>
+           <a data-buy="ENAFF CULIK AKU DONG" href="pembayaran.html?produk=ENAFF%20CULUK%20AKU%20DONG" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover:text-black font-medium transition">🛒 Beli</a>
+           <button data-cart="ENAFF CULIK AKU DONG" class="add-cart-btn px-3 py-2 rounded-xl bg-[#ffd24d] text-black font-semibold">Tambah ke Keranjang</button>
+         </div>
+         <div class="player-controls-container"></div>
+       </div>
+       <audio id="audio43" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/43.mp3" preload="metadata"></audio>
+     </li>
+
     </ul>
   </main>
 
@@ -1013,7 +1029,8 @@
       audio39:94,
       audio40:126,
       audio41:53,
-      audio42:145
+      audio42:145,
+      audio43:63
     };
 
     // Helper: format seconds -> mm:ss
