--- a/jual-flm.html
+++ b/jual-flm.html
@@ -980,6 +980,38 @@
        <audio id="audio43" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/43.mp3" preload="metadata"></audio>
      </li>
 
+     <!-- 44 -->
+     <li data-uid="43" data-prod-id="Breakbeat DJ Herjuna" data-price="139000" data-category="FYP Tiktok,Indobass" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+       <img src="https://i.imgur.com/ghNd4So.jpeg" alt="Breakbeat DJ Herjuna" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
+       <div class="flex-1">
+         <div class="font-semibold leading-tight">Breakbeat DJ Herjuna</div>
+         <div class="text-sm opacity-90">💲 Rp139.000</div>
+         <div class="mt-2 flex gap-2 items-center">
+           <button data-audio="audio44" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white transition">▶ Play Preview</button>
+           <a data-buy="Breakbeat DJ Herjuna" href="pembayaran.html?produk=Breakbeat%20DJ%20Herjuna" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover:text-black font-medium transition">🛒 Beli</a>
+           <button data-cart="Breakbeat DJ Herjuna" class="add-cart-btn px-3 py-2 rounded-xl bg-[#ffd24d] text-black font-semibold">Tambah ke Keranjang</button>
+         </div>
+         <div class="player-controls-container"></div>
+       </div>
+       <audio id="audio44" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/44.mp3" preload="metadata"></audio>
+     </li>
+
+     <!-- 45 -->
+     <li data-uid="44" data-prod-id="Style Elart Rmx" data-price="90000" data-category="FYP Tiktok,Indobass,ENAFF" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+       <img src="https://i.imgur.com/ghNd4So.jpeg" alt="Style Elart Rmx" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
+       <div class="flex-1">
+         <div class="font-semibold leading-tight">Style Elart Rmx</div>
+         <div class="text-sm opacity-90">💲 Rp90.000</div>
+         <div class="mt-2 flex gap-2 items-center">
+           <button data-audio="audio45" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white transition">▶ Play Preview</button>
+           <a data-buy="Style Elart Rmx" href="pembayaran.html?produk=Style%20Elart%20Rmx" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover:text-black font-medium transition">🛒 Beli</a>
+           <button data-cart="Style Elart Rmx" class="add-cart-btn px-3 py-2 rounded-xl bg-[#ffd24d] text-black font-semibold">Tambah ke Keranjang</button>
+         </div>
+         <div class="player-controls-container"></div>
+       </div>
+       <audio id="audio45" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/45.mp3" preload="metadata"></audio>
+     </li>
+
     </ul>
   </main>
 
@@ -1030,7 +1062,9 @@
       audio40:126,
       audio41:53,
       audio42:145,
-      audio43:63
+      audio43:63,
+      audio44:119,
+      audio45:59
     };
 
     // Helper: format seconds -> mm:ss
