--- a/jual-flm.html
+++ b/jual-flm.html
@@ -420,15 +420,15 @@
       </li>
 
       <!-- 8 -->
-      <li data-uid="7" data-prod-id="arif" data-price="50000" data-category="slow,FYP Tiktok" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
-        <img src="https://i.imgur.com/ghNd4So.jpeg" alt="FLM Arif Sopan" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
+      <li data-uid="7" data-prod-id="Tante Culik V2" data-price="50000" data-category="slow,FYP Tiktok" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+        <img src="https://i.imgur.com/ghNd4So.jpeg" alt="Tante Culik V2" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
         <div class="flex-1">
-          <div class="font-semibold leading-tight">FLM Arif Sopan</div>
+          <div class="font-semibold leading-tight">Tante Culik V2</div>
           <div class="text-sm opacity-90">💲 Rp 50.000</div>
           <div class="mt-2 flex gap-2 items-center">
             <button data-audio="audio8" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover=text-white transition">▶ Play Preview</button>
-            <a data-buy="arif" href="pembayaran.html?produk=FLM%20Arif%20Sopan" class="px-3 py-2 rounded-xl bg-[#106EBE] hover-bg-[#0FFCBE] hover=text-black font-medium transition">🛒 Beli</a>
-            <button data-cart="arif" class="add-cart-btn px-3 py-2 rounded-xl bg-[#ffd24d] text-black font-semibold">Tambah ke Keranjang</button>
+            <a data-buy="Tante Culik V2" href="pembayaran.html?produk=Tante%20Culik%20V2" class="px-3 py-2 rounded-xl bg-[#106EBE] hover-bg-[#0FFCBE] hover=text-black font-medium transition">🛒 Beli</a>
+            <button data-cart="Tante Culik V2" class="add-cart-btn px-3 py-2 rounded-xl bg-[#ffd24d] text-black font-semibold">Tambah ke Keranjang</button>
           </div>
           <div class="player-controls-container"></div>
         </div>
