Update search placeholder text in jual-flm.html

--- a/jual-flm.html
+++ b/jual-flm.html
@@ -324,7 +324,7 @@
   <input
     id="search"
     type="search"
-    placeholder="Cari nama, kategori, atau harga (contoh: rully / FYP / 89000)"
+    placeholder="Tante Culik V2 🔍︎"
     class="w-full px-4 py-3 rounded-xl bg-white/10 placeholder-white/70 text-white outline-none border border-white/10"
     style="box-shadow:0 6px 14px rgba(0,0,0,0.25);"
     autocomplete="off"
