Update favicon and background images in index.html

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="https://i.imgur.com/aRy9T88.png" sizes="512x512">
-  <link rel="apple-touch-icon" href="https://i.imgur.com/aRy9T88.png">
+  <link rel="icon" type="image/png" href="logowebbundar.webp" sizes="512x512">
+  <link rel="apple-touch-icon" href="logowebbundar.webp">
 
   <!-- SEO Meta Tags -->
   <title>Muslih Fvnky Shop - Jual FLM, Projek FL Studio Mobile, Jasa Musik Murah</title>
@@ -76,7 +76,7 @@
 
     html, body { height: 100%; margin: 0; padding: 0; -webkit-font-smoothing:antialiased; }
     body {
-      background: url('https://i.imgur.com/p0K2KQs.png') no-repeat center center fixed;
+      background: url('backgroundweb.webp') no-repeat center center fixed;
       background-size: cover;
       font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
       color: white;
@@ -229,7 +229,7 @@
 
   <!-- Header -->
   <header class="animated-gradient" role="banner">
-    <img src="https://i.imgur.com/4jIRft9.jpeg" alt="Logo Muslih Fvnky" class="float-logo">
+    <img src="logowebasli.webp" alt="Logo Muslih Fvnky" class="float-logo">
     <div>
       <h1 class="text-xl font-bold">Muslih Fvnky Shop</h1>
       <p class="text-sm text-white/90">Tempat Jual Beli FLM Murah</p>
