--- a/jasa-chord-dan-bpm.html
+++ b/jasa-chord-dan-bpm.html
@@ -30,7 +30,7 @@
 
   <style>
     body {
-      background-image: url('https://i.imgur.com/p0K2KQs.png');
+      background-image: url('backgroundweb.webp');
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
@@ -80,7 +80,7 @@
 
       <!-- Header -->
       <header class="flex items-center gap-4 p-4 bg-gradient-to-r from-[#106EBE] to-[#0FFCBE] text-white shadow-md rounded-lg mb-6">
-        <img src="https://i.imgur.com/ghNd4So.jpeg" alt="Logo Muslih Fvnky" class="w-14 h-14 rounded-full shadow-lg">
+        <img src="logowebasli.webp" alt="Logo Muslih Fvnky" class="w-14 h-14 rounded-full shadow-lg">
         <div>
           <h1 class="text-xl font-bold">Muslih Fvnky Shop</h1>
           <p class="text-sm text-gray-200">Jasa Nyusun Chord & BPM Lagu — Kirim detail, kami proses</p>
