--- a/pembayaran2.html
+++ b/pembayaran2.html
@@ -21,7 +21,7 @@
     }
     html, body { height: 100%; margin: 0; padding: 0; }
     body {
-      background: url('https://i.imgur.com/p0K2KQs.png') no-repeat center center fixed;
+      background: url('backgroundweb.webp') no-repeat center center fixed;
       background-size: cover;
       font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
       color: white;
@@ -96,7 +96,7 @@
 
   <!-- Header -->
   <header class="animated-gradient" role="banner">
-    <img src="https://i.imgur.com/4jIRft9.jpeg" alt="Logo Muslih Fvnky" class="float-logo">
+    <img src="logowebasli.webp" alt="Logo Muslih Fvnky" class="float-logo">
     <div>
       <h1 class="text-xl font-bold">Muslih Fvnky Shop</h1>
       <p class="text-sm text-white/90">Halaman Pembayaran</p>
@@ -123,7 +123,7 @@
         <h3 class="text-lg font-semibold mb-3">QRIS (Scan untuk bayar)</h3>
         <!-- Simpan gambar QR yang kamu kirim sebagai qris.png di folder yang sama -->
         <div class="text-center">
-          <img src="qris.png" alt="QRIS Muslih Fvnky Shop" class="mx-auto rounded-lg shadow-lg" style="max-width:340px;width:100%;height:auto;">
+          <img src="qris.webp" alt="QRIS Muslih Fvnky Shop" class="mx-auto rounded-lg shadow-lg" style="max-width:340px;width:100%;height:auto;">
         </div>
         <p class="text-sm text-gray-200 text-center mt-3">Bisa dibayar dengan Dana, Gopay, ShopeePay, dll.</p>
       </div>
