--- a/pembayaran.html
+++ b/pembayaran.html
@@ -29,7 +29,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: url('https://i.imgur.com/p0K2KQs.png') no-repeat center center fixed;
+      background: url('backgroundweb.webp') no-repeat center center fixed;
       background-size: cover;
       color: #fff;
       text-align: center;
@@ -128,7 +128,7 @@
 
     <p style="margin:6px 0 4px 0"><strong>Nomor DANA:</strong> <span style="color:#001827;background:#0FFCBE;padding:4px 8px;border-radius:6px;font-weight:900">083821665970</span></p>
 
-    <img src="https://i.imgur.com/gITZbXT.png" alt="Qris" class="qr-img" />
+    <img src="qris.webp" alt="Qris" class="qr-img" />
 
     <!-- Keranjang (jika ada) -->
     <div id="cart-found" style="display:none">
